data/derived/fa15/progs/unify/prog1173.ml.out
Characters 111-112:
  let f a x = let sum = fst x + snd x + fst a in (sum / 10, sum mod 10)::a in
                                                                         ^
Error: This expression has type int * 'a
       but an expression was expected of type (int * int) list
